--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,37 +2,29 @@ body {
   font-family: Verdana;
   background-color: black;
   text-align: center;
+  color: white;
 }
 
 h1 {
-  color: white;
-  font-family: Verdana, sans-serif;
   font-weight: normal;
   font-size: 50px;
-  align-self: center;
-  font-weight: bold;
 }
 
 h2 {
-  font-family: Verdana, sans-serif;
   font-weight: 300;
   font-size: 42px;
-  color: white;
-  font-weight: bold;
 }
 
 p {
-  font-family: verdana, sans-serif;
   font-size: 21px;
   color: gray;
 }
 
-a {
+.cta {
   color: aquamarine;
   font-size: 16px;
 }
 
 .footer {
   text-align: right;
-  color: gray;
 }
